--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li>projets</li>
+          <li><a>projets</a></li>
           <li>
             <a href="#contact">contact</a>
           </li>
@@ -155,7 +155,7 @@
 
     <footer>
       <nav>
-        <ul class="mentions">
+        <ul>
           <li>Mentions Légales</li>
         </ul>
       </nav>
