--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -20,8 +20,8 @@
           <li>
             <a href="index.html"> projets</a>
           </li>
-          <li>contact</li>
-          <li>login</li>
+          <li><a>contact</a></li>
+          <li><a>login</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
