--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,6 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <script defer src="./script.js"></script>
   </head>
   <body>
     <header>
@@ -56,13 +57,13 @@
       <section id="portfolio">
         <h2>Mes Projets</h2>
         <div class="categories">
-          <button class="categories-btn">Tous</button>
+          <!-- <button class="categories-btn">Tous</button>
           <button class="categories-btn">Objets</button>
           <button class="categories-btn">Appartements</button>
-          <button class="categories-btn">Hotels & restaurants</button>
+          <button class="categories-btn">Hotels & restaurants</button> -->
         </div>
         <div class="gallery">
-          <figure>
+          <!-- <figure>
             <img src="assets/images/abajour-tahina.png" alt="Abajour Tahina" />
             <figcaption>Abajour Tahina</figcaption>
           </figure>
@@ -135,7 +136,7 @@
               alt="Hotel First Arte - New Delhi"
             />
             <figcaption>Hotel First Arte - New Delhi</figcaption>
-          </figure>
+          </figure> -->
         </div>
       </section>
       <section id="contact">
