--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
+    <script defer src="./login.js"></script>
   </head>
   <body id="login-page">
     <header class="login-header">
@@ -28,11 +29,11 @@
     </header>
     <section id="login">
       <h2>Log In</h2>
-      <form action="#" method="post">
+      <form class="login-form" action="#" method="post">
         <label for="email">Email</label>
         <input type="email" name="email" id="email" />
         <label for="email">Mot de passe</label>
-        <input type="password" name="mdp" id="mdp" />
+        <input type="password" name="password" id="password" />
         <input type="submit" value="Se connecter" />
         <button type="button" class="mdp-forgotten-btn">
           Mot de passe oublié
