catgories display, token removed on lougout click as to be fixed

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -32,12 +32,10 @@
       <form class="login-form" action="#" method="post">
         <label for="email">Email</label>
         <input type="email" name="email" id="email" />
-        <div class="log-error"></div>
-        </div>
+        <p class="log-error"></p>
         <label for="email">Mot de passe</label>
         <input type="password" name="password" id="password" />
-        <div class="log-error-mdp"></div>
-
+        <p class="log-error-mdp"></p>
         <input type="submit" value="Se connecter" />
         <button type="button" class="mdp-forgotten-btn">
           Mot de passe oublié
