--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,92 +20,122 @@
     <script defer type="module" src="./script.js"></script>
   </head>
   <body>
-    <div class="header-bar">
-      <div>
-        <i class="fa-regular fa-pen-to-square edit-icon"></i>
-        Mode édition
+    <div class="body">
+      <div class="header-bar">
+        <div>
+          <i class="fa-regular fa-pen-to-square edit-icon"></i>
+          Mode édition
+        </div>
       </div>
-    </div>
-    <div class="body-width">
-      <header>
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <div class="body-width">
+        <header>
+          <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+          <nav>
+            <ul>
+              <li><a>projets</a></li>
+              <li>
+                <a href="#contact">contact</a>
+              </li>
+              <li>
+                <a href="login.html" id="login"> login </a>
+                <a id="logout"> logout </a>
+              </li>
+              <li>
+                <img src="./assets/icons/instagram.png" alt="Instagram" />
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <main>
+          <section id="introduction">
+            <figure>
+              <img
+                src="./assets/images/sophie-bluel.png"
+                alt="Photo de Sophie Bluel"
+              />
+            </figure>
+            <article>
+              <h2>Designer d'espace</h2>
+              <p>
+                Je raconte votre histoire, je valorise vos idées. Je vous
+                accompagne de la conception à la livraison finale du chantier.
+              </p>
+              <p>
+                Chaque projet sera étudié en commun, de façon à mettre en valeur
+                les volumes, les matières et les couleurs dans le respect de
+                l’esprit des lieux et le choix adapté des matériaux. Le suivi du
+                chantier sera assuré dans le souci du détail, le respect du
+                planning et du budget.
+              </p>
+              <p>
+                En cas de besoin, une équipe pluridisciplinaire peut-être
+                constituée : architecte DPLG, décorateur(trice)
+              </p>
+            </article>
+          </section>
+          <section id="portfolio">
+            <h2>Mes projets</h2>
+
+            <button class="edit-btn">
+              <i class="fa-regular fa-pen-to-square edit-icon"></i>
+              modifier
+            </button>
+
+            <div id="modal" class="edit-modal">
+              <button class="close-modal">x</button>
+              <p class="edit-modal-upper-text">Galerie photo</p>
+              <div class="works-box"></div>
+              <div class="add-photo-div">
+                <i class="fa-regular fa-image"></i>
+                <input
+                  type="submit"
+                  value="+ Ajouter photo"
+                  class="add-img-btn"
+                />
+                <p>jpg, png : 4mo max</p>
+              </div>
+              <form class="add-work-form" action="#" method="post">
+                <label for="title">Titre</label>
+                <input type="text" name="title" id="title" />
+                <label for="Catégorie">Catégorie</label>
+                <input type="text" name="Catégorie" id="Catégorie" />
+              </form>
+                <div class="add-categories-div">
+                  <i class="fa-solid fa-chevron-down"></i>
+                </div>
+              <button class="add-work-btn">Ajouter une photo</button>
+            </div>
+
+            <div class="categories"></div>
+            <div class="gallery"></div>
+          </section>
+          <section id="contact">
+            <h2>Contact</h2>
+            <p>Vous avez un projet ? Discutons-en !</p>
+            <form action="#" method="post">
+              <label for="name">Nom</label>
+              <input type="text" name="name" id="name" />
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" />
+              <label for="message">Message</label>
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+              ></textarea>
+              <input type="submit" value="Envoyer" />
+            </form>
+          </section>
+        </main>
+      </div>
+      <footer>
         <nav>
           <ul>
-            <li><a>projets</a></li>
-            <li>
-              <a href="#contact">contact</a>
-            </li>
-            <li>
-              <a href="login.html" id="login"> login </a>
-              <a id="logout"> logout </a>
-            </li>
-            <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+            <li>Mentions Légales</li>
           </ul>
         </nav>
-      </header>
-      <main>
-        <section id="introduction">
-          <figure>
-            <img src="./assets/images/sophie-bluel.png" alt="" />
-          </figure>
-          <article>
-            <h2>Designer d'espace</h2>
-            <p>
-              Je raconte votre histoire, je valorise vos idées. Je vous
-              accompagne de la conception à la livraison finale du chantier.
-            </p>
-            <p>
-              Chaque projet sera étudié en commun, de façon à mettre en valeur
-              les volumes, les matières et les couleurs dans le respect de
-              l’esprit des lieux et le choix adapté des matériaux. Le suivi du
-              chantier sera assuré dans le souci du détail, le respect du
-              planning et du budget.
-            </p>
-            <p>
-              En cas de besoin, une équipe pluridisciplinaire peut-être
-              constituée : architecte DPLG, décorateur(trice)
-            </p>
-          </article>
-        </section>
-        <section id="portfolio">
-          <h2>Mes projets</h2>
-          <button class="edit-btn" type="submit">
-            <i class="fa-regular fa-pen-to-square edit-icon"></i>
-            modifier
-          </button>
-          <div id="modal" class="edit-modal">
-            <button class="close-modal" type="submit">X</button>
-            <p>Galerie photo</p>
-            <div class="categories"></div>
-          </div>
-          <div class="gallery"></div>
-        </section>
-        <section id="contact">
-          <h2>Contact</h2>
-          <p>Vous avez un projet ? Discutons-en !</p>
-          <form action="#" method="post">
-            <label for="name">Nom</label>
-            <input type="text" name="name" id="name" />
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" />
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-              cols="30"
-              rows="10"
-            ></textarea>
-            <input type="submit" value="Envoyer" />
-          </form>
-        </section>
-      </main>
+      </footer>
     </div>
-    <footer>
-      <nav>
-        <ul>
-          <li>Mentions Légales</li>
-        </ul>
-      </nav>
-    </footer>
   </body>
 </html>
