--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script defer src="./login.js"></script>
+    <script defer src="./utils.js"></script>
   </head>
   <body id="login-page">
     <header class="login-header">
