--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -132,12 +132,7 @@
                   <!-- Les catégories seront ajoutées dynamiquement ici -->
                 </select>
 
-                <button
-                  class="save-work-btn save-work-btn-completed"
-                  type="submit"
-                >
-                  Valider
-                </button>
+                <button class="save-work-btn" type="submit">Valider</button>
               </form>
 
               <button class="add-work-btn">Ajouter une photo</button>
