same commit as right before this one

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,9 +14,9 @@
       src="https://kit.fontawesome.com/c660848571.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./utils.js"></script>
-    <script defer src="./script.js"></script>
-    <script defer src="./modal.js"></script>
+    <script type="module" src="./utils.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./modal.js"></script>
   </head>
   <body>
     <div class="body">
