last commit until soutenance

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -31,7 +31,9 @@
           <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
           <nav>
             <ul>
-              <li><a href="#projet">projets</a></li>
+              <li>
+                <a href="#projet">projets</a>
+              </li>
               <li>
                 <a href="#contact">contact</a>
               </li>
