formdata handler changer

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -130,7 +130,7 @@
                   <!-- Les catégories seront ajoutées dynamiquement ici -->
                 </select>
 
-                <button class="save-work-btn" type="submit">Valider</button>
+                <button type="button" class="save-work-btn" >Valider</button>
               </form>
 
               <button class="add-work-btn">Ajouter une photo</button>
